--- a/KoOrderRegister/Localization/AppRes.resx
+++ b/KoOrderRegister/Localization/AppRes.resx
@@ -298,4 +298,16 @@
     <value>Search</value>
     <comment>Search</comment>
   </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Settings</value>
+    <comment>Settings</comment>
+  </data>
+  <data name="SelectLanguage" xml:space="preserve">
+    <value>Select language</value>
+    <comment>Select language:</comment>
+  </data>
+  <data name="SelectLanguageLabel" xml:space="preserve">
+    <value>Select language:</value>
+    <comment>Select language:</comment>
+  </data>
 </root>
