--- a/KoOrderRegister/Localization/AppRes.hu-HU.resx
+++ b/KoOrderRegister/Localization/AppRes.hu-HU.resx
@@ -117,197 +117,197 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="OrderList" xml:space="preserve">
-    <value>Orders</value>
-    <comment>Order List</comment>
+	<data name="OrderList" xml:space="preserve">
+    <value>Rendelések</value>
+    <comment>Rendelési lista</comment>
   </data>
-  <data name="Orders" xml:space="preserve">
-    <value>Orders</value>
-    <comment>orders</comment>
+	<data name="Orders" xml:space="preserve">
+    <value>Rendelések</value>
+    <comment>rendelések</comment>
   </data>
-  <data name="OrderNumber" xml:space="preserve">
-    <value>Order Number</value>
-    <comment>Order Number</comment>
+	<data name="OrderNumber" xml:space="preserve">
+    <value>Rendelési szám</value>
+    <comment>Rendelési szám</comment>
   </data>
-  <data name="Name" xml:space="preserve">
-    <value>Name</value>
-    <comment>Name</comment>
+	<data name="Name" xml:space="preserve">
+    <value>Név</value>
+    <comment>Név</comment>
   </data>
-  <data name="Date" xml:space="preserve">
-    <value>Date</value>
-    <comment>Date</comment>
+	<data name="Date" xml:space="preserve">
+    <value>Dátum</value>
+    <comment>Dátum</comment>
   </data>
-  <data name="CustomerList" xml:space="preserve">
-    <value>Customers</value>
-    <comment>CustomerList</comment>
+	<data name="CustomerList" xml:space="preserve">
+    <value>Ügyfelek</value>
+    <comment>Ügyféllista</comment>
   </data>
-  <data name="Update" xml:space="preserve">
-    <value>Update</value>
-    <comment>Update</comment>
+	<data name="Update" xml:space="preserve">
+    <value>Frissítés</value>
+    <comment>Frissítés</comment>
   </data>
-  <data name="AddNewCustomer" xml:space="preserve">
-    <value>Add new customer</value>
-    <comment>AddNewCustomer</comment>
+	<data name="AddNewCustomer" xml:space="preserve">
+    <value>Új ügyfél hozzáadása</value>
+    <comment>Új ügyfél hozzáadása</comment>
   </data>
-  <data name="Person" xml:space="preserve">
-    <value>Person</value>
-    <comment>Person</comment>
+	<data name="Person" xml:space="preserve">
+    <value>Személy</value>
+    <comment>Személy</comment>
   </data>
-  <data name="Return" xml:space="preserve">
-    <value>Return</value>
-    <comment>Return</comment>
+	<data name="Return" xml:space="preserve">
+    <value>Vissza</value>
+    <comment>Vissza</comment>
   </data>
-  <data name="NHI" xml:space="preserve">
-    <value>National Health Insurance</value>
-    <comment>National Health Insurance</comment>
+	<data name="NHI" xml:space="preserve">
+    <value>TAJ szám</value>
+    <comment>TAJ szám</comment>
   </data>
-  <data name="Phone" xml:space="preserve">
-    <value>Phone</value>
-    <comment>Phone</comment>
+	<data name="Phone" xml:space="preserve">
+    <value>Telefon</value>
+    <comment>Telefon</comment>
   </data>
-  <data name="Edit" xml:space="preserve">
-    <value>Edit</value>
-    <comment>Edit</comment>
+	<data name="Edit" xml:space="preserve">
+    <value>Szerkesztés</value>
+    <comment>Szerkesztés</comment>
   </data>
-  <data name="Delete" xml:space="preserve">
-    <value>Delete</value>
-    <comment>Delete</comment>
+	<data name="Delete" xml:space="preserve">
+    <value>Törlés</value>
+    <comment>Törlés</comment>
   </data>
-  <data name="AreYouSureYouWantToDelete" xml:space="preserve">
-    <value>Are you sure you want to delete: </value>
-    <comment>Are you sure you want to delete: </comment>
+	<data name="AreYouSureYouWantToDelete" xml:space="preserve">
+    <value>Biztosan törölni szeretné: </value>
+    <comment>Biztosan törölni szeretné: </comment>
   </data>
-  <data name="Yes" xml:space="preserve">
-    <value>Yes</value>
-    <comment>Yes</comment>
+	<data name="Yes" xml:space="preserve">
+    <value>Igen</value>
+    <comment>Igen</comment>
   </data>
-  <data name="No" xml:space="preserve">
-    <value>No</value>
-    <comment>No</comment>
+	<data name="No" xml:space="preserve">
+    <value>Nem</value>
+    <comment>Nem</comment>
   </data>
-  <data name="Ok" xml:space="preserve">
-    <value>Ok</value>
-    <comment>Ok</comment>
+	<data name="Ok" xml:space="preserve">
+    <value>Rendben</value>
+    <comment>Rendben</comment>
   </data>
-  <data name="FailedToDelete" xml:space="preserve">
-    <value>Failed to delete.</value>
-    <comment>Failed to delete.</comment>
+	<data name="FailedToDelete" xml:space="preserve">
+    <value>Nem sikerült törölni.</value>
+    <comment>Nem sikerült törölni.</comment>
   </data>
-  <data name="Save" xml:space="preserve">
-    <value>Save</value>
-    <comment>Save</comment>
+	<data name="Save" xml:space="preserve">
+    <value>Mentés</value>
+    <comment>Mentés</comment>
   </data>
-  <data name="FailedToSave" xml:space="preserve">
-    <value>Failed to save!</value>
-    <comment>FailedToSave</comment>
+	<data name="FailedToSave" xml:space="preserve">
+    <value>Nem sikerült menteni!</value>
+    <comment>Nem sikerült menteni!</comment>
   </data>
-  <data name="SuccessToSave" xml:space="preserve">
-    <value>Success to save</value>
-    <comment>SuccessToSave</comment>
+	<data name="SuccessToSave" xml:space="preserve">
+    <value>Sikeresen mentve</value>
+    <comment>Sikeresen mentve</comment>
   </data>
-  <data name="NHILabel" xml:space="preserve">
-    <value>National Health Insurance:</value>
-    <comment>NHIL:</comment>
+	<data name="NHILabel" xml:space="preserve">
+    <value>TAJ szám:</value>
+    <comment>TAJ szám:</comment>
   </data>
-  <data name="NoteLabel" xml:space="preserve">
-    <value>Note:</value>
-    <comment>NoteLabel</comment>
+	<data name="NoteLabel" xml:space="preserve">
+    <value>Megjegyzés:</value>
+    <comment>Megjegyzés</comment>
   </data>
-  <data name="PhoneLabel" xml:space="preserve">
-    <value>Phone:</value>
-    <comment>PhoneLabel</comment>
+	<data name="PhoneLabel" xml:space="preserve">
+    <value>Telefon:</value>
+    <comment>Telefon</comment>
   </data>
-  <data name="AddressLabel" xml:space="preserve">
-    <value>Address:</value>
-    <comment>AddressLabel</comment>
+	<data name="AddressLabel" xml:space="preserve">
+    <value>Cím:</value>
+    <comment>Cím</comment>
   </data>
-  <data name="NameLabel" xml:space="preserve">
-    <value>Name:</value>
-    <comment>NameLabel</comment>
+	<data name="NameLabel" xml:space="preserve">
+    <value>Név:</value>
+    <comment>Név</comment>
   </data>
-  <data name="EmailLabel" xml:space="preserve">
+	<data name="EmailLabel" xml:space="preserve">
     <value>Email:</value>
-    <comment>EmailLabel</comment>
+    <comment>Email</comment>
   </data>
-  <data name="CustomerDetails" xml:space="preserve">
-    <value>Customer details</value>
-    <comment>CustomerDetails</comment>
+	<data name="CustomerDetails" xml:space="preserve">
+    <value>Ügyfél adatai</value>
+    <comment>Ügyfél adatai</comment>
   </data>
-  <data name="Copy" xml:space="preserve">
-    <value>Copy</value>
-    <comment>Copy</comment>
+	<data name="Copy" xml:space="preserve">
+    <value>Másolás</value>
+    <comment>Másolás</comment>
   </data>
-  <data name="Copyd" xml:space="preserve">
-    <value>Copyd</value>
-    <comment>Copyd</comment>
+	<data name="Copyd" xml:space="preserve">
+    <value>Másolva</value>
+    <comment>Másolva</comment>
   </data>
-  <data name="Order" xml:space="preserve">
-    <value>Order</value>
-    <comment>Order</comment>
+	<data name="Order" xml:space="preserve">
+    <value>Rendelés</value>
+    <comment>Rendelés</comment>
   </data>
-  <data name="OrderNumberLabel" xml:space="preserve">
-    <value>Order number:</value>
-    <comment>OrderNumber</comment>
+	<data name="OrderNumberLabel" xml:space="preserve">
+    <value>Rendelési szám:</value>
+    <comment>Rendelési szám</comment>
   </data>
-  <data name="DateLabel" xml:space="preserve">
-    <value>Date:</value>
-    <comment>DateLabel</comment>
+	<data name="DateLabel" xml:space="preserve">
+    <value>Dátum:</value>
+    <comment>Dátum</comment>
   </data>
-  <data name="AddNewOrder" xml:space="preserve">
-    <value>Add new order</value>
-    <comment>AddNewOrder</comment>
+	<data name="AddNewOrder" xml:space="preserve">
+    <value>Új rendelés hozzáadása</value>
+    <comment>Új rendelés hozzáadása</comment>
   </data>
-  <data name="OutDateLabel" xml:space="preserve">
-    <value>Order issue date:</value>
-    <comment>OutDateLabel</comment>
+	<data name="OutDateLabel" xml:space="preserve">
+    <value>Rendelés kiállításának dátuma:</value>
+    <comment>Rendelés kiállításának dátuma</comment>
   </data>
-  <data name="StartDateLabel" xml:space="preserve">
-    <value>Order pickup date:</value>
-    <comment>StartDateLabel</comment>
+	<data name="StartDateLabel" xml:space="preserve">
+    <value>Rendelés átvételének dátuma:</value>
+    <comment>Rendelés átvételének dátuma</comment>
   </data>
-  <data name="SelectCustomer" xml:space="preserve">
-    <value>Select customer:</value>
-    <comment>SelectCustomer</comment>
+	<data name="SelectCustomer" xml:space="preserve">
+    <value>Válasszon ügyfelet:</value>
+    <comment>Válasszon ügyfelet</comment>
   </data>
-  <data name="ChooseAnCustomer" xml:space="preserve">
-    <value>Choose an customer</value>
-    <comment>Choose an customer</comment>
+	<data name="ChooseAnCustomer" xml:space="preserve">
+    <value>Válasszon ügyfelet</value>
+    <comment>Válasszon ügyfelet</comment>
   </data>
-  <data name="ProductIdLabel" xml:space="preserve">
-    <value>Product id:</value>
-    <comment>ProductIdLabel</comment>
+	<data name="ProductIdLabel" xml:space="preserve">
+    <value>Termékazonosító:</value>
+    <comment>Termékazonosító</comment>
   </data>
-  <data name="StartDate" xml:space="preserve">
-    <value>Order pickup date</value>
-    <comment>StartDate</comment>
+	<data name="StartDate" xml:space="preserve">
+    <value>Rendelés átvételének dátuma</value>
+    <comment>Rendelés átvételének dátuma</comment>
   </data>
-  <data name="SelectFiles" xml:space="preserve">
-    <value>Select files</value>
-    <comment>Select files</comment>
+	<data name="SelectFiles" xml:space="preserve">
+    <value>Válassza ki a fájlokat</value>
+    <comment>Fájlok kiválasztása</comment>
   </data>
-  <data name="FailedToOpen" xml:space="preserve">
-    <value>Failed tTo open: </value>
-    <comment>FailedToOpen</comment>
+	<data name="FailedToOpen" xml:space="preserve">
+    <value>Nem sikerült megnyitni: </value>
+    <comment>Nem sikerült megnyitni</comment>
   </data>
-  <data name="Open" xml:space="preserve">
-    <value>Open</value>
-    <comment>Open
-</comment>
+	<data name="Open" xml:space="preserve">
+    <value>Megnyitás</value>
+    <comment>Megnyitás</comment>
   </data>
-  <data name="Search" xml:space="preserve">
-    <value>Search</value>
-    <comment>Search</comment>
+	<data name="Search" xml:space="preserve">
+    <value>Keresés</value>
+    <comment>Keresés</comment>
   </data>
-  <data name="Settings" xml:space="preserve">
-    <value>Settings</value>
-    <comment>Settings</comment>
+	<data name="Settings" xml:space="preserve">
+    <value>Beállítások</value>
+    <comment>Beállítások</comment>
   </data>
-  <data name="SelectLanguage" xml:space="preserve">
-    <value>Select language</value>
-    <comment>Select language:</comment>
+	<data name="SelectLanguage" xml:space="preserve">
+    <value>Nyelv kiválasztása</value>
+    <comment>Nyelv kiválasztása</comment>
   </data>
-  <data name="SelectLanguageLabel" xml:space="preserve">
-    <value>Select language:</value>
-    <comment>Select language:</comment>
+	<data name="SelectLanguageLabel" xml:space="preserve">
+    <value>Nyelv kiválasztása:</value>
+    <comment>Nyelv kiválasztása</comment>
   </data>
+
 </root>
