Revert "6 add hungrain language"

--- a/KoOrderRegister/Localization/AppRes.resx
+++ b/KoOrderRegister/Localization/AppRes.resx
@@ -146,7 +146,7 @@
     <comment>Update</comment>
   </data>
   <data name="AddNewCustomer" xml:space="preserve">
-    <value>Add new customer</value>
+    <value>Add New Customer</value>
     <comment>AddNewCustomer</comment>
   </data>
   <data name="Person" xml:space="preserve">
@@ -297,17 +297,5 @@
   <data name="Search" xml:space="preserve">
     <value>Search</value>
     <comment>Search</comment>
-  </data>
-  <data name="Settings" xml:space="preserve">
-    <value>Settings</value>
-    <comment>Settings</comment>
-  </data>
-  <data name="SelectLanguage" xml:space="preserve">
-    <value>Select language</value>
-    <comment>Select language:</comment>
-  </data>
-  <data name="SelectLanguageLabel" xml:space="preserve">
-    <value>Select language:</value>
-    <comment>Select language:</comment>
   </data>
 </root>
