--- a/KoOrderRegister/Localization/AppRes.hu-HU.resx
+++ b/KoOrderRegister/Localization/AppRes.hu-HU.resx
@@ -327,4 +327,19 @@
   <data name="PlsChoosLocatoinToBackup" xml:space="preserve">
     <value>Kérem válaszon egy helyet az eszközén a biztonsági mentésnek</value>
   </data>
+  <data name="Loading" xml:space="preserve">
+    <value>Kérem ne kapcsolja ki a programot...</value>
+  </data>
+  <data name="AreYouSureYouRestore" xml:space="preserve">
+    <value>Biztos vissza akarja állítani a biztonsági metésből? Menden adat törlődi fog ami alkalmazásba jelenleg benne van!</value>
+  </data>
+  <data name="PlsSelectBackupFile" xml:space="preserve">
+    <value>Kérem válaszon egy biztonsági mentés fájlt</value>
+  </data>
+  <data name="FaliedToRestore" xml:space="preserve">
+    <value>Sikeretelen adatbázis vissza állítás</value>
+  </data>
+  <data name="DatabaseRestoredSuccessfully" xml:space="preserve">
+    <value>Sikeres vissza állítás</value>
+  </data>
 </root>
